--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>auth-service</name>
-    <description>auth-service</description>
+    <name>auth-parent</name>
+    <description>auth-parent</description>
 
     <parent>
         <groupId>com.github.hicolors.colors.framework</groupId>
         <artifactId>parent</artifactId>
-        <version>${framework.version}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -46,5 +46,18 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshot</id>
+            <name>OSS Snapshots Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>release</id>
+            <name>OSS Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
