--- a/auth-model/pom.xml
+++ b/auth-model/pom.xml
@@ -4,7 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>auth-model</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
 
     <parent>
         <artifactId>auth-parent</artifactId>
@@ -17,8 +16,7 @@
 
         <dependency>
             <groupId>com.github.hicolors.colors.framework</groupId>
-            <artifactId>core</artifactId>
-            <scope>compile</scope>
+            <artifactId>common</artifactId>
         </dependency>
 
     </dependencies>
