--- a/auth-interface/pom.xml
+++ b/auth-interface/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
     <artifactId>auth-interface</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
 
     <parent>
         <artifactId>auth-parent</artifactId>
@@ -18,7 +18,13 @@
         <dependency>
             <groupId>com.github.hicolors.service</groupId>
             <artifactId>auth-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.14</version>
         </dependency>
 
     </dependencies>
