--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
                 <version>${framework.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.hicolors.colors.framework</groupId>
+                <artifactId>common</artifactId>
+                <version>${framework.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
