auth-core 第一次调整代码

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -29,6 +29,8 @@ spring:
       hibernate.cache.use_second_level_cache: false
       hibernate.show_sql: true
       hibernate.current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
+      hibernate.enable_lazy_load_no_trans: true
+    open-in-view: true
 
 logging:
   config: classpath:logback.xml
