--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         maxOpenPreparedStatements: 20
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
       use-new-id-generator-mappings: true
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
@@ -41,7 +41,7 @@ security:
 # 认证登录
 colors:
   security:
-    enable: false
+    enable: true
     oauth2:
       tokenStore : redis
       clients[0]:
