--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         maxOpenPreparedStatements: 20
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
       use-new-id-generator-mappings: true
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
