--- a/auth-sdk/pom.xml
+++ b/auth-sdk/pom.xml
@@ -2,15 +2,24 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>auth-sdk</artifactId>
+
     <parent>
         <artifactId>auth-parent</artifactId>
         <groupId>com.github.hicolors.service</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
+    <dependencies>
 
-    <artifactId>auth-sdk</artifactId>
+        <dependency>
+            <groupId>com.github.hicolors.colors.framework</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
 
+    </dependencies>
 
 </project>
