--- a/auth-interface/pom.xml
+++ b/auth-interface/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>auth-interface</artifactId>
 
     <parent>
-        <artifactId>auth-parent</artifactId>
+        <artifactId>auth</artifactId>
         <groupId>com.github.hicolors.service</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
