--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>auth-service</artifactId>
 
     <parent>
-        <artifactId>auth-parent</artifactId>
+        <artifactId>auth</artifactId>
         <groupId>com.github.hicolors.service</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
