--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     druid:
-      url: jdbc:mysql://127.0.0.1:3306/colors_auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+      url: jdbc:mysql://47.105.97.16:3306/colors_auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
       username: root
-      password: liweichao
+      password: root
   redis:
-    host: 127.0.0.1
+    host: 47.105.97.16
     port: 6379
-    database: 5
+    database: 1
 
