--- a/auth-interface/pom.xml
+++ b/auth-interface/pom.xml
@@ -27,6 +27,12 @@
             <version>1.5.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
