--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -48,11 +48,11 @@ colors:
         expire-in: 180
         length: 6
     oauth2:
-      token-store: redis
+      token-store: jwt
       clients[0]:
         client-id: colors
         client-secret: colors
-        access-token-validate-seconds: 3600
+        access-token-validate-seconds: 7200
     social:
       weixin:
         app-id: wxd99431bbff8305a0
@@ -60,9 +60,6 @@ colors:
       qq:
         app-id: wxd99431bbff8305a0
         app-secret: 60f78681d063590a469f1b297feff3c4
-
-redisson:
-  config: classpath:single-server.yml
 
 management:
   security:
