--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
       hibernate.show_sql: true
       hibernate.current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
       hibernate.enable_lazy_load_no_trans: true
-      hibernate.ejb.interceptor: com.github.hicolors.colors.framework.core.others.jpa.interceptor.BizInterceptor
+      hibernate.ejb.interceptor: com.github.hicolors.colors.framework.core.jpa.interceptor.BizInterceptor
     open-in-view: true
 
 logging:
