--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -48,7 +48,7 @@ colors:
         expire-in: 180
         length: 6
     oauth2:
-      token-store: jwt
+      token-store: redis
       clients[0]:
         client-id: colors
         client-secret: colors
