--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -7,6 +7,7 @@ spring:
   redis:
     host: 47.105.97.16
     port: 6379
+    password: liweichao
     database: 1
 
 # redis client 的一种，性能据说强于 jedis .
