--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     druid:
-      url: jdbc:mysql://47.105.97.16:3306/colors_auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+      url: jdbc:mysql://liweichao.xyz:3306/colors_auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
       username: root
       password: root
   redis:
-    host: 47.105.97.16
+    host: liweichao.xyz
     port: 6389
     password: liweichao
     database: 1
