--- a/auth-model/pom.xml
+++ b/auth-model/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>auth</artifactId>
         <groupId>com.github.hicolors.service</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
 
@@ -16,7 +16,24 @@
 
         <dependency>
             <groupId>com.github.hicolors.colors.framework</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>common-model</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
     </dependencies>
