--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -9,14 +9,14 @@
     <parent>
         <artifactId>auth</artifactId>
         <groupId>com.github.hicolors.service</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
 
         <dependency>
             <groupId>com.github.hicolors.colors.framework</groupId>
-            <artifactId>lock</artifactId>
+            <artifactId>common-lock</artifactId>
         </dependency>
 
         <dependency>
@@ -28,7 +28,7 @@
 
         <dependency>
             <groupId>com.github.hicolors.colors.framework</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>common-core</artifactId>
         </dependency>
 
         <dependency>
@@ -76,6 +76,16 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -112,6 +122,5 @@
         </plugins>
 
     </build>
-
 
 </project>
